<resources>
	<string name="app_name">Picture This</string>
	<string name="title_activity_view_challenges">ViewChallengesActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>

	<!-- Create challenge -->
	<string name="title">Title</string>
	<string name="create_challenge_title">Create Challenge</string>
	<string name="take_picture">Take Picture</string>
	<string name="is_public">Public</string>
	<string name="location">Location</string>
	<string name="select_friends">Select Friends</string>
	<string name="create_challenge">Create Challenge</string>
</resources>
