<?xml version="1.0" encoding="utf-8"?>
<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/activity_horizontal_margin"
		android:orientation="vertical"
		tools:context="com.jankrodriguez.picturethis.activity.CreateChallengeActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<EditText
					android:id="@+id/createTitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/title"
					android:inputType="text"/>
		</android.support.design.widget.TextInputLayout>

		<ImageView
				android:id="@+id/createTakePicture"
				android:layout_width="match_parent"
				android:layout_height="250dp"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:background="@color/colorPrimaryDark"
				android:contentDescription="@string/take_picture"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_photo_camera_black_24dp"
				android:tint="@color/colorAccent"/>

		<GridLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:columnCount="2">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:text="@string/is_public"/>

			<android.support.v7.widget.SwitchCompat
					android:id="@+id/createPublicSwitch"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:checked="true"/>

			<Button
					android:id="@+id/createSelectFriends"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:layout_gravity="center_horizontal"
					android:backgroundTint="@color/colorPrimary"
					android:text="@string/select_friends"
					android:textColor="@android:color/white"
					android:visibility="gone"
					tools:visibility="visible"/>

			<LinearLayout
					android:id="@+id/createFriendsList"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:orientation="vertical"
					android:visibility="gone"
					tools:visibility="visible"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:layout_gravity="center_vertical"
					android:layout_marginEnd="@dimen/activity_horizontal_margin"
					android:text="@string/location"/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_columnSpan="1"
					android:src="@drawable/ic_gps_not_fixed_black_24dp"/>
		</GridLayout>


		<Button
				android:id="@+id/createChallengeBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:backgroundTint="@color/colorPrimary"
				android:text="@string/create_challenge"
				android:textColor="@android:color/white"/>

	</LinearLayout>

</ScrollView>
